# werk

./: .gitignore  .gitmodules  .travis.yml  COPYING  Cargo.toml  LICENSE  README.md  build.rs  run_tests.sh
dev/: Cargo.toml
dev/src/: main.rs
src/: ffi.rs  ffi_wrapper.h  framing.rs  inside_ogg.rs  lib.rs  range.rs
werk/: Cargo.toml  build.rs
werk-sys/: Cargo.toml  build.rs
werk-sys/src/: ffi_wrapper.h
werk/src/: ffi.rs  ffi_wrapper.h  lib.rs  repacketizer.rs
werk/src/celt/: arch.rs  bands.rs  cwrs.rs  entcode.rs  entdec.rs  laplace.rs  lpc.rs  mathops.rs  mod.rs  pitch.rs  quant_bands.rs  rate.rs  vq.rs
werk/src/silk/: mod.rs  sum_sqr_shift.rs  table_LSF_cos.rs  tables_LTP.rs  tables_NLSF_CB_NB_MB.rs  tables_NLSF_CB_WB.rs  tables_gain.rs  tables_other.rs  tables_pitch_lag.rs  tables_pulses_per_block.rs
werk_test/: Cargo.toml  Makefile  build.rs
werk_test/src/: lib.rs
