[package]
name = "werk-sys"
version = "0.1.0"
authors = ["est31 <MTest31@outlook.com>"]
license = "BSD-3-Clause"
description = "sys crate needed by werk"
repository = "https://github.com/est31/werk"

[dependencies]

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
bindgen = "0.26"
