[package]
name = "werk"
version = "0.1.0"
authors = ["est31 <MTest31@outlook.com>", "The opus project developers"]
license = "BSD-3-Clause"
description = "Pure Rust Opus library"
repository = "https://github.com/est31/werk"
keywords = ["ogg", "opus"]

[dependencies]
libc = "0.2.26"

[build-dependencies]
gcc = "0.3"
bindgen = "0.26"
